# openapi/src/paths/contracts.yaml
@@ -592,15 +592,7 @@ collection:
         schema:
           type: array
           items:
-            type: string
-            description: Current lifecycle status of the contract
-            enum:
-              - DRAFT
-              - ACTIVE
-              - EXPIRED
-              - TERMINATED
-              - PENDING_SIGNATURE
-              - NOTICE_GIVEN
+            $ref: '#/components/schemas/ContractStatus'
         style: form
         explode: true
       - name: propertyIdentifier
